--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
 <app-header></app-header>
+<button (click)="login()">Login</button>
+<button (click)="logout()">Logout</button>
 <router-outlet></router-outlet>
