--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,1 +1,6 @@
-<p>header works!</p>
+<ul style="display:inline;">
+    <a [routerLink]="['']"> Index</a>
+    <li>
+        <a [routerLink]="['home']"> Home</a>
+    </li>
+</ul>
