crete login component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<button (click)="login()">Login</button>
+<!-- <button (click)="login()">Login</button>
 <button (click)="logout()">Logout</button>
-<button (click)="verify()">verify</button>
+<button (click)="verify()">verify</button> -->
 <router-outlet></router-outlet>
