--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,5 +1,7 @@
-<ul style="display:inline;">
-    <a [routerLink]="['']"> Index</a>
+<ul>
+    <li>
+        <a [routerLink]="['login']"> Login</a>
+    </li>
     <li>
         <a [routerLink]="['home']"> Home</a>
     </li>
