--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,8 +1,11 @@
-<!-- <ul>
-    <li>
-        <a [routerLink]="['login']"> Login</a>
-    </li>
-    <li>
-        <a [routerLink]="['home']"> Home</a>
-    </li>
-</ul> -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
+    <div class="collapse navbar-collapse">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link" [routerLink]="['home']">Home </a>
+            </li>
+
+        </ul>
+    </div>
+</nav>
