--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,11 +1,9 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-
+<nav *ngIf="authenticationService.isAuthenticated()" class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="collapse navbar-collapse">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
                 <a class="nav-link" [routerLink]="['home']">Home </a>
             </li>
-
         </ul>
     </div>
 </nav>
