--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -4,6 +4,9 @@
             <li class="nav-item">
                 <a class="nav-link" [routerLink]="['home']">Home </a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" [routerLink]="['post']">Post </a>
+            </li>
         </ul>
     </div>
 </nav>
