--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,4 +1,4 @@
-<nav *ngIf="authenticationService.isAuthenticated()" class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav *ngIf="" class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="collapse navbar-collapse">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
