--- a/src/app/post/post-create/post-create.component.html
+++ b/src/app/post/post-create/post-create.component.html
@@ -1,16 +1,16 @@
 <div class="col-12">
-    <form class="mt-5">
+    <form class="mt-5" [formGroup]="form" (ngSubmit)="create()">
         <div class="form-group col-3">
             <label for="exampleFormControlInput1">Title</label>
-            <input type="text" class="form-control">
+            <input type="text" class="form-control" formControlName="title">
         </div>
         <div class="form-group col-5">
             <label for="exampleFormControlInput1">Description</label>
-            <textarea type="text" class="form-control"></textarea>
+            <textarea type="text" class="form-control" formControlName="description"></textarea>
         </div>
         <div class="form-group col-12">
             <label for="exampleFormControlInput1">Text</label>
-            <textarea type="text" class="form-control" rows="12"></textarea>
+            <textarea type="text" class="form-control" rows="12" formControlName="text"></textarea>
         </div>
         <button type="submit" class="btn btn-primary btn-lg m-3">Create</button>
     </form>
