create post list component

--- a/src/app/post/post-create/post-create.component.html
+++ b/src/app/post/post-create/post-create.component.html
@@ -1,4 +1,4 @@
-<div class="col-12">
+<!-- <div class="col-12">
     <form class="mt-5" [formGroup]="form" (ngSubmit)="create()">
         <div class="form-group col-3">
             <label for="exampleFormControlInput1">Title</label>
@@ -14,4 +14,4 @@
         </div>
         <button type="submit" class="btn btn-primary btn-lg m-3" [disabled]="form.invalid">Create</button>
     </form>
-</div>
+</div> -->
