--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -7,6 +7,10 @@
             <li class="nav-item">
                 <a class="nav-link" [routerLink]="['post']">Posts </a>
             </li>
+
         </ul>
     </div>
+
+    <button *ngIf="authenticationService.isAuthenticated()" class="btn btn-outline-success" type="button" (click)="logout()">Logout</button>
+
 </nav>
