--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -7,6 +7,9 @@
             <li class="nav-item">
                 <a class="nav-link" [routerLink]="['post']">Posts </a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" *ngIf="authenticationService.isAuthenticated()" [routerLink]="['admin']">Admin </a>
+            </li>
 
         </ul>
     </div>
