--- a/src/app/post/post-list/post-list.component.html
+++ b/src/app/post/post-list/post-list.component.html
@@ -1,5 +1,5 @@
 <div class="list-group m-3" *ngFor="let post of posts$ | async">
-    <a class="list-group-item list-group-item-action ">
+    <a [routerLink]="['/post-view', post.id]" class="list-group-item list-group-item-action ">
         <div class="d-flex w-100 justify-content-between">
             <h5 class="mb-1">{{post.title}}</h5>
             <small>{{post.date | date: 'MMM d, y, h:mm:ss a'}}</small>
