create method do update or create post

--- a/src/app/post/post-create/post-create.component.html
+++ b/src/app/post/post-create/post-create.component.html
@@ -1,5 +1,5 @@
 <div class="col-12">
-    <form class="mt-5" [formGroup]="form" (ngSubmit)="create()">
+    <form class="mt-5" [formGroup]="form" (ngSubmit)="handle()">
         <div class="form-group col-5">
             <label for="exampleFormControlInput1">Title</label>
             <input type="text" class="form-control" formControlName="title">
