--- a/src/app/post/post-create/post-create.component.html
+++ b/src/app/post/post-create/post-create.component.html
@@ -2,7 +2,7 @@
     <form class="mt-5" [formGroup]="form" (ngSubmit)="handle()">
         <div class="form-group col-5">
             <label for="exampleFormControlInput1">Title</label>
-            <input type="text" class="form-control" formControlName="title">
+            <input type="text" class="form-control" formControlName="title" />
         </div>
         <div class="form-group col-5">
             <label for="exampleFormControlInput1">Description</label>
@@ -13,9 +13,11 @@
             <textarea type="text" class="form-control" rows="12" formControlName="text"></textarea>
         </div>
         <div class="form-check ml-3">
-            <input type="checkbox" class="form-check-input" formControlName="active">
+            <input type="checkbox" class="form-check-input" formControlName="active" />
             <label class="form-check-label">Active</label>
         </div>
-        <button type="submit" class="btn btn-primary btn-lg m-3" [disabled]="form.invalid">Create</button>
+        <button type="submit" class="btn btn-primary btn-lg m-3" [disabled]="form.invalid">
+      {{ isNew ? "Create" : 'Update' }}
+    </button>
     </form>
 </div>
