fix date format

--- a/src/app/post/post-view/post-view.component.html
+++ b/src/app/post/post-view/post-view.component.html
@@ -2,7 +2,7 @@
     <h1>
         {{post.title}}</h1>
     <span>
-   Gregori - {{post.date | date: 'MMM d, y'}}
+   Gregori - {{post.date | date: 'dd/MM/YYYY'}}
         </span>
 </div>
 <div class="col-12">
